gcc/testsuite/gm2/iso/fail/simpledef1.mod
IMPLEMENTATION MODULE simpledef1 ;

END simpledef1.
